[gd_scene load_steps=6 format=3 uid="uid://dq5vc2nol8y18"]

[ext_resource type="Script" uid="uid://dsjfojqx1xb5k" path="res://Scripts/LobbyManager.gd" id="1_bpe3w"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ers0q"]
load_path = "res://.godot/imported/battlefield_grass.png-e5cddb3c47484e286f5272d6124ff1c1.ctex"

[sub_resource type="LabelSettings" id="LabelSettings_lolwk"]
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bpe3w"]
font_size = 11
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wgubu"]
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bpe3w")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CompressedTexture2D_ers0q")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = -62.0
offset_right = 69.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2

[node name="PreJoinOrHostMenu" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/PreJoinOrHostMenu"]
layout_mode = 2
placeholder_text = "Your name..."
alignment = 1
max_length = 12
keep_editing_on_text_submit = true
expand_to_text_length = true
selecting_enabled = false

[node name="SelectHostJoinContainer" type="HBoxContainer" parent="VBoxContainer/PreJoinOrHostMenu"]
layout_mode = 2

[node name="SelectHostButton" type="Button" parent="VBoxContainer/PreJoinOrHostMenu/SelectHostJoinContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host"

[node name="SelectJoinButton" type="Button" parent="VBoxContainer/PreJoinOrHostMenu/SelectHostJoinContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="PostJoinOrHostMenu" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StartGameButton" type="Button" parent="VBoxContainer/PostJoinOrHostMenu"]
layout_mode = 2
text = "Start Game"

[node name="LobbyPlayersLabel" type="Label" parent="VBoxContainer/PostJoinOrHostMenu"]
layout_mode = 2
text = "
Lobby Players"
label_settings = SubResource("LabelSettings_lolwk")
horizontal_alignment = 1

[node name="PlayerList" type="ItemList" parent="VBoxContainer/PostJoinOrHostMenu"]
layout_mode = 2
tooltip_auto_translate_mode = 2
auto_height = true

[node name="HostContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayerCountContainer" type="HBoxContainer" parent="VBoxContainer/HostContainer"]
layout_mode = 2

[node name="SizeText" type="Label" parent="VBoxContainer/HostContainer/PlayerCountContainer"]
layout_mode = 2
tooltip_text = "How much health your gladiator has when starting a duel."
mouse_filter = 1
text = "Lobby size"
label_settings = SubResource("LabelSettings_bpe3w")

[node name="SizeNumber" type="Label" parent="VBoxContainer/HostContainer/PlayerCountContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = " 4 "
label_settings = SubResource("LabelSettings_wgubu")

[node name="PlusMinusContainer" type="HBoxContainer" parent="VBoxContainer/HostContainer/PlayerCountContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Sub" type="Button" parent="VBoxContainer/HostContainer/PlayerCountContainer/PlusMinusContainer"]
layout_mode = 2
text = "-"

[node name="Add" type="Button" parent="VBoxContainer/HostContainer/PlayerCountContainer/PlusMinusContainer"]
layout_mode = 2
text = "+"

[node name="HostButton" type="Button" parent="VBoxContainer/HostContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Create Lobby"

[node name="GoBack" type="Button" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 73.0
offset_bottom = 39.0
text = "Disconnect"

[node name="ChooseSteamOrEnet" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.25
offset_top = -20.0
offset_right = 125.25
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="UseSteamButton" type="Button" parent="ChooseSteamOrEnet"]
layout_mode = 2
size_flags_horizontal = 2
text = "Use Steam"

[node name="UseEnetButton" type="Button" parent="ChooseSteamOrEnet"]
layout_mode = 2
size_flags_horizontal = 10
text = "Use ENet"

[node name="LobbyContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -151.5
offset_right = 100.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2

[node name="RefreshLobbies" type="Button" parent="LobbyContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Refresh lobbies"

[node name="Lobbies" type="ScrollContainer" parent="LobbyContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Lobbies" type="VBoxContainer" parent="LobbyContainer/Lobbies"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="ChooseSteamOrEnet/UseSteamButton" to="." method="_on_use_steam_button_pressed"]
[connection signal="pressed" from="ChooseSteamOrEnet/UseEnetButton" to="." method="_on_use_enet_button_pressed"]
[connection signal="pressed" from="LobbyContainer/RefreshLobbies" to="." method="_on_list_lobbies_pressed"]
[connection signal="pressed" from="LobbyContainer/RefreshLobbies" to="." method="_on_refresh_lobbies_pressed"]
